fix: api endpoints updates
