# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\API\Auth\LoginController;
 use App\Http\Controllers\API\Auth\RegisterController;
 use App\Http\Controllers\API\Auth\UserController;
+use App\Http\Controllers\API\Auth\VerificationController;
 use App\Http\Controllers\API\DatasetController;
 use App\Http\Controllers\API\FileSystemController;
 use App\Http\Controllers\API\ProjectController;
@@ -20,16 +21,17 @@ use Illuminate\Support\Facades\Route;
 */
 
 // routes/api.php
+Route::prefix('auth')->group(function () {
+    Route::post('/login', [LoginController::class, 'login']);
+    Route::post('/register', [RegisterController::class, 'register']);
+    Route::middleware(['auth:sanctum'])->group(function () {
+        Route::get('/logout', [LoginController::class, 'logout']);
+        Route::get('/user/info', [UserController::class, 'info']);
+        Route::get('/email/resend', [VerificationController::class, 'resend']);
+    });
+});
 
 Route::prefix('v1')->group(function () {
-    Route::prefix('auth')->group(function () {
-        Route::post('/login', [LoginController::class, 'login']);
-        Route::post('/register', [RegisterController::class, 'register']);
-        Route::middleware(['auth:sanctum'])->group(function () {
-            Route::get('/logout', [LoginController::class, 'logout']);
-            Route::get('/user/info', [UserController::class, 'info']);
-        });
-    });
 
     // Search
     Route::post('/search/{smiles?}', [SearchController::class, 'search']);
